# spxtacular

./: .gitattributes  .gitignore  404.html  CLAUDE.md  HISTORY.md  README.md  hooks.py  index.html  junit.xml  justfile  mkdocs.yml  plot_example.py  pyproject.toml  score.py  sitemap.xml  sudo.py  try.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  draft-pdf.yml  python-package.yml  python-publish.yml
api/: index.html
deconvolution/: index.html
docs/: api.md  deconvolution.md  index.md  readers.md  scoring.md  spectrum.md  visualization.md
readers/: index.html
scoring/: index.html
search/: search_index.json
spectrum/: index.html
src/spxtacular/: __init__.py  compress.py  core.py  enums.py  matching.py  noise.py  plot_table.py  reader.py  scoring.py  usi.py  utils.py  visualization.py
src/spxtacular/decon/: __init__.py  dclass.py  deconvolution.py  graph_ops.py  greedy.py  navigation.py  score.py  scored.py
tests/: data.py  example.mzML  test_combine.py  test_compression.py  test_core_extra.py  test_decon_integration.py  test_denoise.py  test_dreader.py  test_matching.py  test_merge.py  test_mzml_reader.py  test_new_features.py  test_noise.py  test_numba_fallback.py  test_persistence.py  test_plot_table.py  test_scoring.py  test_scoring_decon.py  test_visualization.py
tests/data/example_dia.d/: analysis.tdf
tests/data/example_prm.d/: analysis.tdf  analysis.tdf_bin
visualization/: index.html
