[project]
name = "spxtacular"
version = "0.1.0"
description = "Mass spectrometry spectrum processing library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "peptacular",
    "tdfpy",
    "mzmlpy",
]
authors = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
maintainers = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spxtacular"]

[tool.uv]
package = true
dev-dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv.sources]
peptacular = { path = "../peptacular", editable = true }
tdfpy = { path = "../tdfpy", editable = true }
mzmlpy = { path = "../mzmlpy", editable = true }
